update the website

--- a/CSS/educations.css
+++ b/CSS/educations.css
@@ -1,5 +1,5 @@
 .cover_photo{
-    background-image: url(Images/Academic.PNG);
+    background-image: url(../Images/Academic.PNG);
     height: 45vh;
 }
 .cover_photo h1{
