--- a/CSS/aboutMe.css
+++ b/CSS/aboutMe.css
@@ -1,5 +1,5 @@
 .cover_photo{
-    background-image: url(Images/Academic.PNG);
+    background-image: url(../Images/Academic.PNG);
     width: 100%;
     height: 45vh;
     background-repeat: none;
@@ -12,12 +12,11 @@
     line-height: 180px;
     color: black;
 }
-.another h1{
-    margin-left: 140px;
-}
 .about{
     display: flex;
-    margin: 50px 270px 0px 270px;
+    justify-content: center;
+    padding: 30px 50px 30px 50px;
+    /* margin: 50px 270px 0px 270px; */
 }
 .ahasan_pic img{
     width: 350px;
@@ -25,7 +24,7 @@
     border-radius: 5px;
 }
 .text{
-    font-size: 19px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
     margin-left: 20px;
