--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@ nav{
 .logo h1 span{
     color: red;
 }
-ul{
+nav ul{
     float: right;
     margin-top: -52px;
     margin-right: 40px;
@@ -27,7 +27,7 @@ ul{
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
-ul li{
+nav ul li{
     display: inline-block;
     margin: 0px 5px;
 
@@ -36,13 +36,13 @@ ul li{
     color: #fff;
     font-weight: bold;
 }
-ul li a{
+nav ul li a{
     color: #fff;
     font-size: 17px;
     padding: 5px 10px;
     border-radius: 3px;
 }
-ul li a:hover{
+nav ul li a:hover{
     color: red;
 }
 .btn{
@@ -58,42 +58,53 @@ ul li a:hover{
     display: none;
 }
 .cover_photo{
-    background-image: url(Images/coverphoto.PNG);
+    background-image: url(../Images/coverphoto.PNG);
     width: 100%;
-    height: 70vh;
+    height: 50vh;
     background-repeat: none;
     background-position: center;
     background-size: cover;
 }
-.cover_photo h1{
+#xyz{
+    padding-top: 50px;
+}
+.heading-line{
     font-size: 100px;
     color: #fff;
     font-family: 'Courier New', Courier, monospace;
-    line-height: 180px;
-    padding:120px 350px;
     text-align: center;
 }
 .divition{
-    display: flex;
-    margin-top: 35px;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: repeat(4, 250px);
+    gap: 20px;
+    justify-content: center;
     text-align: center;
-    margin-left: 390px;
+    margin-top: 20px;
 }
 .picture img{
     width: 250px;
     height: 250px;
-    margin: 0px 15px;
 }
 .picture a{
     font-family: 'Comic Sans MS', Arial;
     color: rgba(0,101,128,1);
 }
+.picture a h1{
+    margin: 10px 0px;
+}
+.picture img:hover{
+    transform: scale(1.1);
+    background: #e6f7f5;
+    transition: 0.3s;
+}
 footer{
     color: #434343;
     font-family: Arial;
-    font-size: 16px;
+    font-size: 17px;
     text-align: center;
-    margin-top: 80px;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 20px;
     font-weight: 400;
 }
