--- a/CSS/aboutMe.css
+++ b/CSS/aboutMe.css
@@ -1,10 +1,5 @@
 .cover_photo{
     background-image: url(../Images/Academic.PNG);
-    width: 100%;
-    height: 45vh;
-    background-repeat: none;
-    background-position: center;
-    background-size: cover;
 }
 .cover_photo h1{
     font-size: 100px;
@@ -28,4 +23,6 @@
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
     margin-left: 20px;
+    text-align: justify;
+    text-justify: inter-word;
 }
