--- a/CSS/educations.css
+++ b/CSS/educations.css
@@ -1,33 +1,34 @@
 .cover_photo{
     background-image: url(../Images/Academic.PNG);
-    height: 45vh;
 }
 .cover_photo h1{
     color: black;
 }
 .institution{
-    margin: 60px 300px;
+    padding: 5% 10% 0% 10%;
 }
 .ssc{
     display: flex;
+    align-items: center;
+    margin-bottom: 50px;
 }
 .ssc img{
     width: 320px;
     height: 320px;
 }
 .name_text{
-    margin: 45px 30px;
+   margin-left: 30px;
+   width: 50%;
 }
 .name_text h1{
     color: #3c78d8;
     font-size: 45px;
+    margin-bottom: 7px;
 }
 .name_text p{
     font-size: 21px;
-    margin-top: 15px;
-    padding: 0px 350px 0px 0px;
     line-height: 35px;
 }
-.extra{
-    margin-top: 60px;
+.extra .name_text{
+    margin-bottom: 50px;
 }
