--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -27,10 +27,46 @@
     #check:checked ~ ul{
         left: -20%;
     }
-    .heading-line{
-        font-size: 85px;
+    .cover_photo{
+        height: 45vh;
+    }
+    .cover_photo h1{
+        font-size: 80px;
+        line-height: 100px;
     }
     .divition{
+        grid-template-columns: repeat(1, 250px);
+    }
+    .about{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px 30px 30px 30px;
+    }
+    .text{
+        font-size: 17.5px;
+        line-height: 27px;
+        margin-left: 0px;
+        text-align: justify;
+        text-justify: inter-word;
+        margin-top: 20px;
+    }
+    .ahasan_pic img{
+        height: 550px;
+        width: 320px;
+    }
+    .ssc{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+    .name_text{
+        margin-left: 0px;
+        width: 90%;
+        margin-top: 20px;
+     }
+     .part{
         grid-template-columns: repeat(1, 250px);
     }
 }
@@ -40,11 +76,11 @@
     .btn{
         display: block;
     }
-    .logo{
+    nav .logo{
         font-size: 20px;
         padding: 0 40px;
     }
-    ul{
+    nav ul{
         position: fixed;
         top: 135px;
         left: -100%;
@@ -56,7 +92,7 @@
         display: flex;
         flex-direction: column;
     }
-    ul li{
+    nav ul li{
         display: block;
         line-height: 55px;
         margin: 20px 60px;
@@ -68,6 +104,38 @@
         font-size: 90px;
     }
     .divition{
+        grid-template-columns: repeat(1, 250px);
+    }
+    .about{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px 50px 30px 50px;
+    }
+    .text{
+        font-size: 17.5px;
+        line-height: 27px;
+        text-align: left;
+        margin-left: 0px;
+        margin-top: 10px;
+        text-align: justify;
+        text-justify: inter-word;
+    }
+    .ahasan_pic img{
+        height: 650px;
+        width: 400px;
+    }
+    .ssc{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    .name_text{
+        margin-left: 30px;
+        width: 90%;
+     }
+     .part{
         grid-template-columns: repeat(1, 250px);
     }
 }
@@ -91,6 +159,28 @@
     .divition{
         grid-template-columns: repeat(2, 250px);
     }
+    .about{
+        display: flex;
+        justify-content: center;
+        padding: 30px 10px 30px 10px;
+    }
+    .text{
+        font-size: 17.5px;
+        line-height: 27px;
+        margin-left: 20px;
+    }
+    .ahasan_pic img{
+        height: 650px;
+    }
+    .institution{
+        padding: 5% 5% 0% 5%;
+    }
+    .name_text{
+        width: 60%;
+     }
+     .part{
+        grid-template-columns: repeat(2, 250px);
+    }
 }
 /*Mid Laptop Screen Devices*/
 @media (min-width: 992px) and (max-width: 1200px){
@@ -100,6 +190,22 @@
         line-height: 80px;
     }
     .divition{
+        grid-template-columns: repeat(2, 250px);
+    }
+    .about{
+        display: flex;
+        justify-content: center;
+        padding: 30px 15px 30px 15px;
+    }
+    .text{
+        font-size: 18px;
+        line-height: 30px;
+        margin-left: 20px;
+    }
+    .ahasan_pic img{
+        height: 600px;
+    }
+    .part{
         grid-template-columns: repeat(2, 250px);
     }
 }
